<resources>
    <string name="app_name">Argeo</string>

    <string name="menu_addSite">Add Site</string>
    <string name="menu_showMap">Map</string>
    <string name="menu_logOut">Logout</string>
    <string name="menu_cancelSite">Cancel</string>
    <string name="menu_deleteSite">Delete</string>
    <string name="menu_saveSite">Save</string>
    <string name="menu_saveMap">Save</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refreshInfo">Refresh</string>
    <string name="menu_share">Share Site</string>
    <string name="menu_preciseLocation">Navigator</string>
    <string name="menu_showFavourite">Show Favourites</string>
    <string name="menu_showAll">Show All</string>
    <string name="menu_search">Search</string>
    <string name="menu_searchCancel">Cancel Search</string>
    <string name="menu_online">Online</string>
    <string name="menu_offline">Offline</string>

    <string name="toast_missingTitle">Please enter a title</string>
    <string name="toast_missingAuthItems">Please provide email + password</string>
    <string name="toast_signUpFailed">Sign Up Failed</string>
    <string name="toast_logInFailed">"Log In Failed"</string>
    <string name="toast_cameraFailed">Camera Access Denied</string>
    <string name="toast_cameraSavingFailed">Picture Not Saved</string>

    <string name="hint_siteTitle">Site Title</string>
    <string name="hint_siteDescription">Description</string>
    <string name="hint_email">user@mail.com</string>
    <string name="hint_notes">Personal notes of student</string>
    <string name="hint_search">Enter text (dd/mm/yyyy for date)</string>
    <string name="picture_chooser">Select site image</string>
    <string name="dialog_image_photo">Choose a picture to change</string>
    <string name="settings_notAuth">"FirebaseAuth Disabled"</string>

    <string name="title_splash">Argeo</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_site_list">Argeo</string>
    <string name="title_activity_site">Site</string>
    <string name="title_activity_location">Site</string>
    <string name="title_activity_login">Signup/Login to Argeo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_display">Picture</string>
    <string name="title_activity_navigator">Navigator</string>

    <string name="site_title_placeholder">Title</string>
    <string name="site_description_placeholder">Description</string>
    <string name="site_image_placeholder">Image</string>
    <string name="site_display_placeholder">Image</string>
    <string name="argeo_logo_placeholder">Argeo Logo</string>

    <string name="button_addSite">Add Site</string>
    <string name="button_saveSite">Save Site</string>
    <string name="button_changeImage">Images</string>
    <string name="button_makePhoto">Camera</string>
    <string name="button_location">Set Location</string>
    <string name="button_location_change">Change Location</string>
    <string name="button_signUp">Sign Up</string>
    <string name="button_logIn">Log In</string>
    <string name="button_chooseDate">Change Visit Date</string>
    <string name="button_showPassword">Show Password</string>
    <string name="button_hidePassword">Hide Password</string>

    <string name="label_splash">by Lukas Varga</string>
    <string name="label_current_location">Current Location</string>
    <string name="label_lat">Lat:</string>
    <string name="label_lng">Lng:</string>
    <string name="label_lat_map">Lat:</string>
    <string name="label_lng_map">Lng:</string>
    <string name="label_lat_list">Lat:</string>
    <string name="label_lng_list">Lng:</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_card_visited">Visited</string>
    <string name="label_visited">I have visited the site</string>
    <string name="label_favourite">Favourite</string>
    <string name="label_userDetails">Login Details</string>
    <string name="label_statistics">Site Statistics</string>
    <string name="label_nrOfSites">No. of sites</string>
    <string name="label_nrOfVisited">No. visited</string>

</resources>