<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addSite"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_showMap"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_logout"
        android:title="@string/menu_logOut"
        app:showAsAction="never" />

</menu>