<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle1"
            android:title="Subtitle">
            <menu>
                <item
                android:id="@+id/drawer_SiteAdd"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_addSite"
                android:checked="true" />
            </menu>
         </item>
    </group>

    <group
        android:id="@+id/drawer2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle2"
            android:title="Subtitle">
            <menu>
                <item
                    android:id="@+id/drawer_favourite"
                    android:icon="@android:drawable/star_off"
                    android:title="@string/menu_showFavourite" />
                <item
                    android:id="@+id/drawer_map"
                    android:icon="@android:drawable/ic_menu_mapmode"
                    android:title="@string/menu_showMap" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle3"
            android:title="Subtitle">
            <menu>
                <item
                    android:id="@+id/drawer_settings"
                    android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/menu_settings" />


                <item
                    android:id="@+id/drawer_logout"
                    android:icon="@android:drawable/ic_menu_revert"
                    android:title="@string/menu_logOut" />
        </menu>
    </item>
    </group>
</menu>