<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_deleteSite"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/item_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_saveSite"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menu_cancelSite"
        app:showAsAction="always"
        android:visible="false"/>
</menu>